Multiple Changes made,including Mysql